# DV2597-lab1

./: CMakeLists.txt  gaussianpar.cpp  gaussianseq.cpp  qsortpar.cpp  qsortseq.cpp
